--- a/lovemarket/android/app/build.gradle
+++ b/lovemarket/android/app/build.gradle
@@ -153,7 +153,7 @@ dependencies {
     compile project(':react-native-vector-icons')
     compile project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:26.0.0"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:5.5.1'
 
